--- a/rethinkdb/DS18B20.md
+++ b/rethinkdb/DS18B20.md
@@ -1,3 +1,8 @@
 # HOW TO USE DS18B20 SENSOR WITH ARDUINO UNO 
 
-<img href ="
+<img src ="https://github.com/Mrdynamic-soni/IOT/blob/main/rethinkdb/DS18S20-hookup.png">
+
+
+I followed lots of tutorial online to calibirate db18b20 sensor but it was showing default value after lots of  hit and trail method i got  this circuit which works perfectly fine and  outputs actual and perfect values
+
+ For the code you can refer my <a href = "">CODE</a>
