--- a/DS18B20/DS18B20.md
+++ b/DS18B20/DS18B20.md
@@ -5,4 +5,4 @@ I gone through lots of  tutorisla online but i was unable to get values fromm th
 # CIRCUIT CONNECTIONS
  <img src ="https://github.com/Mrdynamic-soni/IOT/blob/main/DS18B20/DS18S20hookup.png">
  
- #for code you can follow my <a =" ">CODE</a>
+ #for code you can follow my <a ="https://github.com/Mrdynamic-soni/IOT/blob/main/DS18B20/ds18b20.ino">CODE</a>
