--- a/DS18B20/DS18B20.md
+++ b/DS18B20/DS18B20.md
@@ -3,6 +3,6 @@
 I gone through lots of  tutorisla online but i was unable to get values fromm this sensor after lots of hit and trial method i get this circuit which works perfectly fine and produces exact values.
 
 # CIRCUIT CONNECTIONS
- <img src ="https://github.com/Mrdynamic-soni/IOT/blob/main/DS18B20/DS18S20hookup.png">
+ <img src ="https://github.com/Mrdynamic-soni/IOT/blob/main/DS18B20/DS18S20-hookup.png">
  
- #for code you can follow my <a ="https://github.com/Mrdynamic-soni/IOT/blob/main/DS18B20/ds18b20.ino">CODE</a>
+ # for code you can follow my <a href = "https://github.com/Mrdynamic-soni/IOT/blob/main/DS18B20/ds18b20.ino ">CODE</a>
